# AssistaskManager-v2

./: .gitignore  Assistask v2 Issues and Improvements.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
docs/: getting-started.md  index.json  keyboard-shortcuts.md  settings.md  slash-commands.md  task-syntax.md  views-and-features.md
src/: App.tsx  PixelText.tsx  SlideMenu.tsx  index.css  listCode.ts  parseTask.ts  settingsStore.ts  store.ts  useNotifications.ts  useSnapshots.ts  useWindowPersistence.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/views/: AboutView.tsx  CompletedView.tsx  SettingsView.tsx  SnapshotsView.tsx  StandupView.tsx
